#30674: fix footer collapsing margins

--- a/Magento_Theme/styles/modules/_page-footer.scss
+++ b/Magento_Theme/styles/modules/_page-footer.scss
@@ -1,6 +1,7 @@
 .page-footer {
     margin-top: 10px;
     background-color: $gray-lightest;
+    overflow: auto;
 
     &__subscribe {
         margin-top: 20px;
